--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,7 @@
       "~src/*": ["src/*"],
       "~assets/*": ["src/assets/*"],
       "~lib/*": ["src/lib/*"],
+      "~styles/*": ["src/styles/*"],
       "~components/*": ["src/components/*"]
     }
   },
