--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,7 @@
       "~assets/*": ["src/assets/*"],
       "~lib/*": ["src/lib/*"],
       "~styles/*": ["src/styles/*"],
+      "~stores/*": ["src/stores/*"],
       "~components/*": ["src/components/*"]
     }
   },
