--- a/src-tauri/pathfinder-levels/Cargo.toml
+++ b/src-tauri/pathfinder-levels/Cargo.toml
@@ -7,7 +7,8 @@ edition = "2021"
 crate-type = ["cdylib", "rlib"]
 
 [dependencies]
-wasm-bindgen = "0.2.63"
+serde = { version = "1.0", features = ["derive"] }
+wasm-bindgen = { version = "0.2.63", features = ["serde-serialize"] }
 wee_alloc = { version = "0.4.5", optional = true }
 
 [profile.release]
