chore: update cargo toml

--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,5 +1,10 @@
 [workspace]
+resolver = "2"
 members=[
     "pathfinder-app",
     "pathfinder-levels"
 ]
+
+
+[profile.release.package.pathfinder-levels]
+opt-level = "s"
