--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "build:wasm": "wasm-pack build src-tauri/pathfinder-levels --target web",
     "preview": "vite preview",
     "check": "svelte-check --tsconfig ./tsconfig.json",
     "tauri": "tauri",
@@ -39,8 +38,6 @@
     "svelte-preprocess": "^5.0.0",
     "tslib": "^2.4.1",
     "typescript": "^4.6.4",
-    "vite": "^4.0.0",
-    "vite-plugin-wasm-pack": "^0.1.12",
-    "wasm-pack": "^0.12.1"
+    "vite": "^4.0.0"
   }
 }
