--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tabler/icons-react": "^3.1.0",
+    "clsx": "^2.1.0",
     "normalize.css": "^8.0.1",
     "pure-rand": "^6.1.0",
     "react": "^18.2.0",
