--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
   "dependencies": {
     "@tabler/icons-react": "^3.1.0",
     "clsx": "^2.1.0",
+    "i18next": "^23.10.1",
+    "i18next-http-backend": "^2.5.0",
     "normalize.css": "^8.0.1",
     "pure-rand": "^6.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^14.1.0",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
