--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@tabler/icons-react": "^3.1.0",
     "clsx": "^2.1.0",
+    "framer-motion": "^11.0.23",
     "i18next": "^23.10.1",
     "i18next-http-backend": "^2.5.0",
     "normalize.css": "^8.0.1",
