--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@tabler/icons-react": "^3.1.0",
     "clsx": "^2.1.0",
     "i18next": "^23.10.1",
+    "i18next-browser-languagedetector": "^8.0.0",
     "i18next-http-backend": "^2.5.0",
     "normalize.css": "^8.0.1",
     "pure-rand": "^6.1.0",
