--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-dom": "^18.2.0",
     "react-i18next": "^14.1.0",
     "uuid": "^9.0.1",
+    "wouter": "^3.2.0",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
