--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "pathfinder",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.1.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -15,6 +15,7 @@
     "@floating-ui/react": "^0.26.16",
     "@tabler/icons-react": "^3.1.0",
     "clsx": "^2.1.0",
+    "focus-trap-react": "^10.2.3",
     "i18next": "^23.10.1",
     "i18next-browser-languagedetector": "^8.0.0",
     "i18next-http-backend": "^2.5.0",
