--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@floating-ui/react": "^0.26.16",
     "@tabler/icons-react": "^3.1.0",
     "clsx": "^2.1.0",
+    "dayjs": "^1.11.13",
     "focus-trap-react": "^10.2.3",
     "i18next": "^23.10.1",
     "i18next-browser-languagedetector": "^8.0.0",
